--- a/src/index.html
+++ b/src/index.html
@@ -4,7 +4,11 @@
         <meta charset="utf-8" />
         <title>BeCode/Mwenbwa</title>
 
-        <meta name="viewport" content="minimum-scale=1, initial-scale=1, width=device-width, shrink-to-fit=no" />
+        <meta
+            name="viewport"
+            content="minimum-scale=1, initial-scale=1, width=device-width, shrink-to-fit=no"
+        />
+        <link rel="shortcut icon" href="./favicon.ico" type="image/x-icon" />
     </head>
     <body>
         <div id="app"></div>
