--- a/src/index.html
+++ b/src/index.html
@@ -9,6 +9,8 @@
             content="minimum-scale=1, initial-scale=1, width=device-width, shrink-to-fit=no"
         />
         <link rel="shortcut icon" href="./favicon.ico" type="image/x-icon" />
+        <link href="https://use.fontawesome.com/releases/v5.13.0/css/all.css" rel="stylesheet">
+    </script>
     </head>
     <body>
         <div id="app"></div>
